--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-icons": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "victory": "^35.0.9"
   },
   "scripts": {
     "start": "craco start",
